Fixed spacing, and sizing for large devices

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -56,4 +56,5 @@ html, body {
 
 .channel {
 	border: 1px solid black;
+	margin: 5px;
 }
